# bench

./: .gitignore  Makefile  README.md  README.txt  cache_test.cpp  environment.yml  numpy_GEMM.py  results.txt  results_2021_M1Pro.txt  results_EPYC_7513.txt  results_i5-2400.txt  update_results.sh
csrc/: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark_exp.cpp  benchmark_fma.cpp  benchmark_func_calls.cpp  benchmark_unhelpful_fma.cpp  fast_exp.h  fast_exp_test.cpp  mpi_benchmark.cpp  run_mpi_benchmark.sh  shared_memory_allreduce.cpp
csrc/asm/: no_fma.asm  with_fma.asm
docs/: README.md
gosrc/: README.md  README.txt  atomic_add_test.go  bandwidth.go  bandwidth_test.go  cgo_call_do_nothing.go  cgo_function_call_test.go  function_call_test.go  inconsistentExec.go  struct_access_test.go
gpu/: Makefile  pytorch_GEMM.py  torch_sparse.ipynb  torch_sparse.py
gpu/nvlink/: CMakeLists.txt  Makefile  README.md  bench_nvlink.cu  environment.yml  nvlink_vis.ipynb  nvlink_vis.py  update_results.sh
gpu/occupancy/: elementwise.ipynb  elementwise.py
gpu/pcie/: CMakeLists.txt  Makefile  README.md  bench_pcie.cu  environment.yml  pcie_vis.ipynb  pcie_vis.py  update_results.sh
gpu/sparsity/: torch_sparse.ipynb  torch_sparse.py
